fix: z-index

--- a/demo/sass/style.scss
+++ b/demo/sass/style.scss
@@ -1,5 +1,6 @@
 #WS-ScroLi {
     position: absolute;
+    z-index: 1;
     &.fixed {
         position: fixed;
     }
